--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
+
 language: python
 
 python:
   - "2.7"
   - "3.5"
+
+install:
+  - pip install coveralls
   
 script:
-  - python hello.py
-
-notifications:
-  slack:
-    on_success: never
-    on_failure: never
+  - coverage run hello.py
+  
+after_success:
+  COVERALLS_REPO_TOKEN=cVpbp2XaBY9uMkcW1RhXUYtaBKEnlcNGB coveralls
